<package>
  <name>annotation_srvs</name>
  <version>1.0.0</version>
  <description>no description</description>
  <author>Ulrich F Klank</author>
  <maintainer email="mustermann@fictional.de">Add Maintainer here</maintainer>
  <license>GPL</license>

  <!-- Dependencies which this package needs to build itself. -->
  <buildtool_depend>catkin</buildtool_depend>

  <!-- Dependencies needed to compile this package. -->
  <build_depend>std_msgs</build_depend>
  <build_depend>triangle_mesh_msgs</build_depend>
  <build_depend>message_generation</build_depend>

  <!-- Dependencies needed after this package is compiled. -->
  <run_depend>std_msgs</run_depend>
  <run_depend>triangle_mesh_msgs</run_depend>
  <run_depend>message_runtime</run_depend>


  <export>
        <!--<cpp cflags="-I${prefix}/srv/cpp"/>-->
 </export>
</package>
