<package>
  <name>cogman_msgs</name>
  <version>1.0.0</version>
  <description>
    Messages related to Manipulation
  </description>
  <author>Alexis Maldonado</author>
  <maintainer email="mustermann@fictional.de">Add Maintainer here</maintainer>
  <license>GPLv3</license>

  <!-- Dependencies which this package needs to build itself. -->
  <buildtool_depend>catkin</buildtool_depend>

  <!-- Dependencies needed to compile this package. -->
  <build_depend>geometry_msgs</build_depend>
  <build_depend>actionlib_msgs</build_depend>
  <build_depend>actionlib</build_depend>
  <build_depend>vision_msgs</build_depend>
  <build_depend>message_generation</build_depend>

  <!-- Dependencies needed after this package is compiled. -->
  <run_depend>geometry_msgs</run_depend>
  <run_depend>actionlib_msgs</run_depend>
  <run_depend>actionlib</run_depend>
  <run_depend>vision_msgs</run_depend>
  <run_depend>message_runtime</run_depend>

</package>




