<package>
  <name>navp_action</name>
  <version>1.0.0</version>
  <description>

     simple P-Controller for a holonomic robot base.

  </description>
  <author>Ingo Kresse</author>
  <maintainer email="mustermann@fictional.de">Add Maintainer here</maintainer>
  <license>BSD</license>

  <!-- Dependencies which this package needs to build itself. -->
  <buildtool_depend>catkin</buildtool_depend>

  <!-- Dependencies needed to compile this package. -->
  <build_depend>std_msgs</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>actionlib</build_depend>
  <build_depend>actionlib_msgs</build_depend>
  <build_depend>message_generation</build_depend>

  <!-- Dependencies needed after this package is compiled. -->
  <run_depend>std_msgs</run_depend>
  <run_depend>geometry_msgs</run_depend>
  <run_depend>actionlib</run_depend>
  <run_depend>actionlib_msgs</run_depend>
  <run_depend>message_runtime</run_depend>

</package>


